--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -752,7 +752,7 @@
     <string name="purchase_error_bad_sku">Hmm&#8230; That purchase didn\'t match one on our record.</string>
     <string name="subscriptions">Subscription are billed after the seven day trial and can be changed/cancelled at any time</string>
     <string name="billed_immediately">This is billed immediately.</string>
-    <string name="lifetime_purchase">$10.99 - Lifetime Membership</string>
+    <string name="lifetime_purchase">US$10.99 - Lifetime Membership</string>
     <string name="lifetime_purchase_summary">Pay once, and never again!</string>
     <string name="subscription_purchase_description">Low price, easy to love!</string>
     <string name="subscription_purchase_summary">Comes with a 7 day trial.</string>
@@ -782,11 +782,11 @@
     <string name="seven_days_free">7 days free!</string>
     <string name="competition_cant_beat"><b>Take 7 days FREE</b> to find out for yourself why no one can touch our <b>speed, pricing, or service</b>.</string>
     <string name="select_a_trial_below">Select any of the <b>three subscription options</b> to start your <b>free trial</b>. You can change or upgrade at any time.</string>
-    <string name="select_a_subscription_below">Select one of the two subscriptions to start your <b>free trial</b>. You can upgrade at any time!</string>
+    <string name="select_a_subscription_below">Select one of the two subscriptions to start your <b>free trial</b>. You can upgrade or cancel at any time!</string>
     <string name="charged_after_trial">Charged after the trial:</string>
-    <string name="monthly_purchase_improved">$0.99 /\nmonth</string>
-    <string name="three_month_purchase_improved">$1.99 /\n3 month</string>
-    <string name="yearly_purchase_improved">$5.99 /\nyear</string>
+    <string name="monthly_purchase_improved">US$0.99\n/month</string>
+    <string name="three_month_purchase_improved">US$1.99\n/3 month</string>
+    <string name="yearly_purchase_improved">US$5.99\n/year</string>
     <string name="subscription_toast">You <b>will not</b> be charged until the 7 day trial is finished.
         Cancel at any time.</string>
     <string name="redirect_to_play_store">Thanks for the upgrade! Please cancel the old subscription from the <b>Play Store</b>. Pulse <b>cannot</b> do this automatically.</string>
